--- a/demo-java-app/src/main/resources/templates/index.html
+++ b/demo-java-app/src/main/resources/templates/index.html
@@ -48,6 +48,7 @@
         }
     </style>
 </head>
+<p style="color: green;">✅ Version mise à jour automatiquement !</p>
 <body>
 
 <div class="container fade-in">
